install to /usr/local/modules

--- a/raw_gadget/Makefile
+++ b/raw_gadget/Makefile
@@ -7,5 +7,9 @@ PWD := $(shell pwd)
 default:
 	$(MAKE) -C $(KDIR) M=$(PWD) SUBDIRS=$(PWD) modules
 
+install:
+	sudo install -d /usr/local/modules
+	sudo install -C insmod.sh raw_gadget.ko /usr/local/modules
+
 clean:
 	$(MAKE) -C $(KDIR) M=$(PWD) SUBDIRS=$(PWD) clean
